[SKY-29]: Add API PATCH endpoint for pilots
