# skyroster-backend/src/main/java/pl/skyroster/skyroster_backend/infrastructure/adapter/in/web/PilotController.java
@@ -6,8 +6,11 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import pl.skyroster.skyroster_backend.application.pilot.DeletePilotUseCase;
 import pl.skyroster.skyroster_backend.application.pilot.GetPilotUseCase;
+import pl.skyroster.skyroster_backend.application.pilot.PatchPilotUseCase;
 import pl.skyroster.skyroster_backend.generated.api.ApiApi;
 import pl.skyroster.skyroster_backend.generated.model.PagedPilotResponse;
+import pl.skyroster.skyroster_backend.generated.model.PilotPatchRequest;
+import pl.skyroster.skyroster_backend.generated.model.PilotResponse;
 
 import java.util.UUID;
 
@@ -17,6 +20,7 @@ public class PilotController {
 
   private final GetPilotUseCase getPilotUseCase;
   private final DeletePilotUseCase deletePilotUseCase;
+  private final PatchPilotUseCase patchPilotUseCase;
 
   @GetMapping(ApiApi.PATH_GET_PILOTS)
   public ResponseEntity<PagedPilotResponse> getPilots(@RequestParam Integer page, @RequestParam Integer size, @RequestParam @Nullable String sort) {
@@ -27,5 +31,10 @@ public class PilotController {
   public ResponseEntity<Void> deletePilotById(@PathVariable UUID pilotId) {
     deletePilotUseCase.deletePilotById(pilotId);
     return ResponseEntity.noContent().build();
+  }
+
+  @PatchMapping(ApiApi.PATH_PATCH_PILOT)
+  public ResponseEntity<PilotResponse> patchPilot(@PathVariable UUID pilotId, @RequestBody PilotPatchRequest request) {
+    return ResponseEntity.ok(patchPilotUseCase.patchPilot(pilotId, request));
   }
 }
