# skyroster-backend/src/main/java/pl/skyroster/skyroster_backend/infrastructure/mappers/AircraftTypeInfoMapper.java
@@ -4,11 +4,18 @@ import pl.skyroster.skyroster_backend.domain.model.AircraftType;
 import pl.skyroster.skyroster_backend.generated.model.AircraftTypeInfo;
 
 public class AircraftTypeInfoMapper {
-    public static AircraftTypeInfo map(AircraftType aircraftType) {
+    public static AircraftTypeInfo toAircraftTypeInfo(AircraftType aircraftType) {
         return new AircraftTypeInfo(
                 aircraftType.getId(),
                 aircraftType.getIcaoCode(),
                 aircraftType.getName()
+        );
+    }
+    public static AircraftType toAircraftTypeInfo(AircraftTypeInfo aircraftType) {
+        return new AircraftType(
+            aircraftType.getId(),
+            aircraftType.getIcaoCode(),
+            aircraftType.getName()
         );
     }
 }
